# crewai-test

./: .env.example  .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  report.md  tailwind.config.ts  tsconfig.json
app/: layout.tsx
app/(routes)/(home)/: page.tsx
app/api/cart/: route.ts
app/api/checkout/: route.ts
app/api/products/: route.ts
app/api/products/[id]/: route.ts
app/cart/: page.tsx
app/category/[slug]/: page.tsx
app/checkout/: page.tsx
app/order/success/: page.tsx
app/product/[id]/: page.tsx
components/layout/: Footer.tsx  Header.tsx
components/molecules/: CategoryFilters.tsx  ProductGallery.tsx
components/organisms/: Hero.tsx  ProductDetail.tsx
crew/: main.ts
lib/: cart.ts  products.ts
src/sprint_3/: crew.py  main.py
src/sprint_3/config/: agents.yaml  tasks.yaml
src/sprint_3/tools/: file_writer.py
tests/: a11y.test.ts  components.test.ts  routes.test.ts
types/: index.ts
